# RAG-Bench

./: README.md  pyproject.toml
config/: README.md
dataset_processor/: README.md  main.py
dataset_processor/generation/: __init__.py  base.py  naive_gpt_generator.py  naive_openai_generator.py
dataset_processor/splitter/: __init__.py  base.py  epub_section_splitter.py  histoire_paris_splitter.py
datasets/tableau-historique-paris/: 1.epub  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
notebooks/: generate_rag_openai_base.ipynb  histoire_paris_text_splitter.ipynb
scripts/: run_processing.sh
tests/dataset_processor/: test_generator.py  test_splitter.py
