[tool.poetry]
name = "rag-bench"
version = "0.1.0"
description = "A comprehensive suite for implementing, testing, and benchmarking various Retrieval-Augmented Generation (RAG) architectures across diverse datasets and use cases."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
isort = "5.13.2"
pytest = "8.3.3"
pre-commit = "4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
